--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=a6b910dcb3acb0229c13",
+    "/css/app.css": "/css/app.css?id=55972315e7b86f585b78",
+    "/js/util.js": "/js/util.js?id=cda95ba8e0a46cff7658"
 }
